@@ -1,5 +1,10 @@
 Version 3.5 - ????
 
+	Gobo Eiffel XSLT library
+
+	* This library is now sufficiently stable and mature to be
+	  considered supported.
+
 	geant:
 
 	* Added attribute 'force' to task <xslt>. Use this attribute to
